Feature/upgrade version 4 (#23)
* feat: updated pom, helm, properties tests and improved controllers

* feat: update docker and workflows

* feat: added permissions to openapi

* feat: docs, exception handling, tests

* fix: test

* feat: restructured project

* feat: controllers package and logs
