# src/main/openapi/openapi-bff.yaml
@@ -12,6 +12,10 @@ tags:
 paths:
   /histories:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - histories
       description: Find all parameters history
@@ -56,11 +60,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationParameterHistoryPageResult'
         "400":
-          description: Bad request
-        "500":
-          description: Internal Server Error
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /histories/counts:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - histories
       description: Get creation dates and counts by criteria
@@ -107,11 +117,17 @@ paths:
                 items:
                   $ref: '#/components/schemas/ParameterHistoryCount'
         "400":
-          description: Bad request
-        "500":
-          description: Internal Server Error
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /histories/latest:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - histories
       description: Find all parameters history latest
@@ -156,11 +172,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationParameterHistoryPageResult'
         "400":
-          description: Bad request
-        "500":
-          description: Internal Server Error
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /histories/{id}:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - histories
       description: Find parameters history by Id
@@ -179,13 +201,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationParameterHistory'
         "400":
-          description: Bad request
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
         "404":
           description: Not Found
-        "500":
-          description: Internal Server Error
   /parameters:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - parameters
       description: Find all parameters
@@ -235,15 +263,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationParameterPageResult'
         "400":
-          description: Bad request
-        "500":
-          description: Internal Server Error
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
     post:
+      x-onecx:
+        permissions:
+          parameter:
+            - write
       tags:
         - parameters
       description: Create parameter
       operationId: createParameterValue
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -256,13 +291,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RestException'
+                $ref: '#/components/schemas/ProblemDetailResponse'
         "404":
           description: Not Found
-        "500":
-          description: Internal Server Error
   /parameters/applications:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - parameters
       description: Find all parameters
@@ -275,11 +312,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationsPageResult'
         "400":
-          description: Bad request
-        "500":
-          description: Internal Server Error
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /parameters/keys:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - parameters
       description: Find all parameters
@@ -298,11 +341,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/KeysPageResult'
         "400":
-          description: Bad request
-        "500":
-          description: Internal Server Error
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /parameters/{id}:
     get:
+      x-onecx:
+        permissions:
+          parameter:
+            - read
       tags:
         - parameters
       description: Find parameter by id
@@ -321,12 +370,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationParameter'
         "400":
-          description: Bad request
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
         "404":
           description: Not Found
-        "500":
-          description: Internal Server Error
     put:
+      x-onecx:
+        permissions:
+          parameter:
+            - write
       tags:
         - parameters
       description: Update parameter
@@ -338,6 +393,7 @@ paths:
           schema:
             type: string
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -350,12 +406,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RestException'
+                $ref: '#/components/schemas/ProblemDetailResponse'
         "404":
           description: Not Found
-        "500":
-          description: Internal Server Error
     delete:
+      x-onecx:
+        permissions:
+          parameter:
+            - delete
       tags:
         - parameters
       description: Delete parameter
@@ -374,9 +432,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RestException'
-        "500":
-          description: Internal Server Error
+                $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   schemas:
     ApplicationParameterCreate:
@@ -578,16 +634,32 @@ components:
         count:
           format: int64
           type: integer
-    RestException:
+    ProblemDetailResponse:
       type: object
       properties:
         errorCode:
           type: string
+        detail:
+          type: string
+        params:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProblemDetailParam'
+        invalidParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProblemDetailInvalidParam'
+    ProblemDetailParam:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+    ProblemDetailInvalidParam:
+      type: object
+      properties:
+        name:
+          type: string
         message:
           type: string
-        parameters:
-          type: array
-          items: {}
-        namedParameters:
-          type: object
-          additionalProperties: {}
